T2T =   ALGORITHMS.t2t  CHD.t2t         CONFIG.t2t    FOOTER.t2t           NEWSLOG.t2t  TABLE5.t2t \
	BDZ.t2t         CHM.t2t         EXAMPLES.t2t  GOOGLEANALYTICS.t2t  README.t2t   TABLEBRZ1.t2t \
	BMZ.t2t         COMPARISON.t2t  FAQ.t2t       GPERF.t2t            TABLE1.t2t   TABLEBRZ2.t2t \
	BRZ.t2t         CONCEPTS.t2t    FCH.t2t       LOGO.t2t             TABLE4.t2t   TABLEBRZ3.t2t \
	CMPH.t2t

FIGS = figs/img177.png figs/img82.png figs/img1.png figs/img109.png	\
	figs/img195.png figs/img203.png figs/img222.png			\
	figs/img97.png figs/img240.png figs/img111.png			\
	figs/img237.png figs/img143.png figs/img227.png			\
	figs/img142.png figs/img119.png figs/img75.png			\
	figs/img207.png figs/img162.png figs/img84.png figs/img79.png	\
	figs/img136.png figs/img238.png figs/img252.png			\
	figs/img80.png figs/img15.png figs/img107.png figs/img92.png	\
	figs/img110.png figs/img103.png figs/img77.png			\
	figs/img174.png figs/img196.png figs/img236.png			\
	figs/img32.png figs/img246.png figs/img115.png			\
	figs/img201.png figs/img204.png figs/img24.png			\
	figs/img123.png figs/img70.png figs/bdz/img82.png		\
	figs/bdz/img1.png figs/bdz/img109.png figs/bdz/img97.png	\
	figs/bdz/img111.png figs/bdz/img119.png figs/bdz/img75.png	\
	figs/bdz/img84.png figs/bdz/img79.png figs/bdz/img136.png	\
	figs/bdz/img80.png figs/bdz/img15.png figs/bdz/img107.png	\
	figs/bdz/img92.png figs/bdz/img110.png figs/bdz/img103.png	\
	figs/bdz/img77.png figs/bdz/img32.png figs/bdz/img115.png	\
	figs/bdz/img24.png figs/bdz/img123.png figs/bdz/img70.png	\
	figs/bdz/img7.png figs/bdz/img114.png figs/bdz/img63.png	\
	figs/bdz/img65.png figs/bdz/img36.png figs/bdz/img74.png	\
	figs/bdz/img87.png figs/bdz/img95.png figs/bdz/img98.png	\
	figs/bdz/img81.png figs/bdz/img86.png figs/bdz/img8.png		\
	figs/bdz/img69.png figs/bdz/img105.png figs/bdz/img132.png	\
	figs/bdz/img93.png figs/bdz/img124.png figs/bdz/img16.png	\
	figs/bdz/img49.png figs/bdz/img56.png figs/bdz/img4.png		\
	figs/bdz/img133.png figs/bdz/img71.png figs/bdz/img61.png	\
	figs/bdz/img135.png figs/bdz/img83.png figs/bdz/img34.png	\
	figs/bdz/img51.png figs/bdz/img53.png figs/bdz/img21.png	\
	figs/bdz/img41.png figs/bdz/img23.png figs/bdz/img19.png	\
	figs/bdz/img10.png figs/bdz/img96.png figs/bdz/img54.png	\
	figs/bdz/img47.png figs/bdz/img117.png figs/bdz/img60.png	\
	figs/bdz/img134.png figs/bdz/img39.png figs/bdz/img20.png	\
	figs/bdz/img25.png figs/bdz/img64.png figs/bdz/img72.png	\
	figs/bdz/img100.png figs/bdz/img30.png figs/bdz/img43.png	\
	figs/bdz/img28.png figs/bdz/img46.png figs/bdz/img22.png	\
	figs/bdz/img52.png figs/bdz/img5.png figs/bdz/img121.png	\
	figs/bdz/img88.png figs/bdz/img112.png figs/bdz/img59.png	\
	figs/bdz/img137.png figs/bdz/img104.png figs/bdz/img40.png	\
	figs/bdz/img11.png figs/bdz/img48.png figs/bdz/img42.png	\
	figs/bdz/img12.png figs/bdz/img129.png figs/bdz/img68.png	\
	figs/bdz/img17.png figs/bdz/img78.png figs/bdz/img2.png		\
	figs/bdz/img9.png figs/bdz/img26.png figs/bdz/img94.png		\
	figs/bdz/img73.png figs/bdz/img37.png figs/bdz/img102.png	\
	figs/bdz/img66.png figs/bdz/img50.png figs/bdz/img67.png	\
	figs/bdz/img14.png figs/bdz/img55.png figs/bdz/img106.png	\
	figs/bdz/img76.png figs/bdz/img13.png figs/bdz/img27.png	\
	figs/bdz/img44.png figs/bdz/img35.png figs/bdz/img3.png		\
	figs/bdz/img131.png figs/bdz/img38.png figs/bdz/img85.png	\
	figs/bdz/img99.png figs/bdz/img125.png figs/bdz/img33.png	\
	figs/bdz/img130.png figs/bdz/img101.png figs/bdz/img126.png	\
	figs/bdz/img138.png figs/bdz/img116.png figs/bdz/img29.png	\
	figs/bdz/img91.png figs/bdz/img89.png figs/bdz/img122.png	\
	figs/bdz/img31.png figs/bdz/img6.png figs/bdz/img45.png		\
	figs/bdz/img18.png figs/bdz/img58.png figs/bdz/img127.png	\
	figs/bdz/img108.png figs/bdz/img90.png figs/bdz/img113.png	\
	figs/bdz/img128.png figs/bdz/img57.png figs/bdz/img120.png	\
	figs/bdz/img62.png figs/bdz/img118.png figs/img7.png		\
	figs/img148.png figs/img114.png figs/img63.png figs/img65.png	\
	figs/img36.png figs/img157.png figs/img74.png figs/img87.png	\
	figs/img95.png figs/img98.png figs/img147.png figs/img81.png	\
	figs/img86.png figs/img8.png figs/img163.png figs/img235.png	\
	figs/img198.png figs/img241.png figs/img153.png			\
	figs/img185.png figs/img69.png figs/img105.png			\
	figs/img132.png figs/img93.png figs/img124.png			\
	figs/img231.png figs/img16.png figs/img151.png figs/img49.png	\
	figs/img56.png figs/img234.png figs/img4.png figs/img133.png	\
	figs/img71.png figs/img61.png figs/img159.png figs/img140.png	\
	figs/img233.png figs/img156.png figs/img135.png			\
	figs/img83.png figs/img34.png figs/img51.png figs/img160.png	\
	figs/img53.png figs/img169.png figs/img21.png figs/img41.png	\
	figs/img23.png figs/img244.png figs/img19.png figs/img10.png	\
	figs/img96.png figs/img208.png figs/img149.png figs/img54.png	\
	figs/img171.png figs/img47.png figs/img190.png			\
	figs/img184.png figs/img188.png figs/img154.png			\
	figs/img117.png figs/img60.png figs/img186.png			\
	figs/img134.png figs/img191.png figs/img213.png			\
	figs/img226.png figs/img211.png figs/img247.png			\
	figs/img181.png figs/img39.png figs/img20.png figs/img25.png	\
	figs/img145.png figs/img180.png figs/img64.png			\
	figs/img220.png figs/img223.png figs/img168.png			\
	figs/img72.png figs/img100.png figs/img30.png figs/img250.png	\
	figs/img173.png figs/img189.png figs/img43.png			\
	figs/img206.png figs/img152.png figs/img219.png			\
	figs/img28.png figs/img46.png figs/img175.png figs/img216.png	\
	figs/img150.png figs/img158.png figs/img22.png figs/img52.png	\
	figs/img229.png figs/img251.png figs/img5.png figs/img121.png	\
	figs/img88.png figs/img197.png figs/img112.png figs/img59.png	\
	figs/img137.png figs/img209.png figs/img164.png			\
	figs/img193.png figs/img172.png figs/img228.png			\
	figs/img104.png figs/img253.png figs/img242.png			\
	figs/img40.png figs/img11.png figs/img225.png figs/img215.png	\
	figs/img218.png figs/img217.png figs/img165.png			\
	figs/img48.png figs/img42.png figs/img199.png figs/img12.png	\
	figs/img243.png figs/img129.png figs/img212.png			\
	figs/img161.png figs/img68.png figs/img17.png figs/img182.png	\
	figs/img78.png figs/img2.png figs/img200.png figs/img139.png	\
	figs/img167.png figs/img221.png figs/img155.png			\
	figs/img192.png figs/img9.png figs/img26.png figs/img94.png	\
	figs/img176.png figs/img73.png figs/img37.png figs/img205.png	\
	figs/img202.png figs/img102.png figs/img66.png			\
	figs/img194.png figs/img50.png figs/img67.png figs/img14.png	\
	figs/img55.png figs/img106.png figs/img76.png figs/img13.png	\
	figs/img27.png figs/img214.png figs/img44.png figs/img187.png	\
	figs/img35.png figs/img3.png figs/img249.png figs/img131.png	\
	figs/img230.png figs/img166.png figs/img38.png figs/img85.png	\
	figs/img99.png figs/img125.png figs/img33.png figs/img130.png	\
	figs/img141.png figs/img101.png figs/img126.png			\
	figs/img138.png figs/img170.png figs/img116.png			\
	figs/img239.png figs/img210.png figs/img29.png			\
	figs/img224.png figs/img91.png figs/img89.png figs/img144.png	\
	figs/img183.png figs/img232.png figs/img122.png			\
	figs/img245.png figs/img248.png figs/brz/img177.png		\
	figs/brz/img195.png figs/brz/img203.png figs/brz/img222.png	\
	figs/brz/img240.png figs/brz/img237.png figs/brz/img227.png	\
	figs/brz/img207.png figs/brz/img162.png figs/brz/brz.png	\
	figs/brz/img238.png figs/brz/brz-partitioning.png		\
	figs/brz/img174.png figs/brz/img196.png figs/brz/img236.png	\
	figs/brz/img201.png figs/brz/img204.png figs/brz/img24.png	\
	figs/brz/img63.png figs/brz/img8.png figs/brz/img235.png	\
	figs/brz/img198.png figs/brz/img241.png figs/brz/img231.png	\
	figs/brz/img49.png figs/brz/img234.png figs/brz/img4.png	\
	figs/brz/img159.png figs/brz/img233.png figs/brz/img135.png	\
	figs/brz/img83.png figs/brz/img160.png figs/brz/img169.png	\
	figs/brz/img23.png figs/brz/img19.png figs/brz/img54.png	\
	figs/brz/img171.png figs/brz/img47.png figs/brz/img190.png	\
	figs/brz/img188.png figs/brz/img191.png figs/brz/img213.png	\
	figs/brz/img226.png figs/brz/img181.png figs/brz/img64.png	\
	figs/brz/img220.png figs/brz/img223.png figs/brz/img168.png	\
	figs/brz/img173.png figs/brz/img189.png figs/brz/img43.png	\
	figs/brz/img206.png figs/brz/img219.png figs/brz/img46.png	\
	figs/brz/img175.png figs/brz/img216.png figs/brz/img22.png	\
	figs/brz/img229.png figs/brz/bmz_temporegressao.png		\
	figs/brz/img5.png figs/brz/img197.png figs/brz/img209.png	\
	figs/brz/img193.png figs/brz/img172.png figs/brz/img228.png	\
	figs/brz/img242.png figs/brz/img225.png figs/brz/img215.png	\
	figs/brz/img218.png figs/brz/img217.png figs/brz/img42.png	\
	figs/brz/img199.png figs/brz/img243.png figs/brz/img212.png	\
	figs/brz/img182.png figs/brz/img200.png figs/brz/img167.png	\
	figs/brz/img221.png figs/brz/img192.png				\
	figs/brz/brz_temporegressao.eps figs/brz/img176.png		\
	figs/brz/img205.png figs/brz/img202.png figs/brz/img66.png	\
	figs/brz/img194.png figs/brz/img50.png figs/brz/img67.png	\
	figs/brz/img55.png figs/brz/img214.png figs/brz/img44.png	\
	figs/brz/img187.png figs/brz/img230.png				\
	figs/brz/brz_temporegressao.png figs/brz/img170.png		\
	figs/brz/img239.png figs/brz/img210.png figs/brz/img224.png	\
	figs/brz/img232.png figs/brz/img58.png figs/brz/img179.png	\
	figs/brz/img178.png figs/brz/img57.png figs/img31.png		\
	figs/img6.png figs/img45.png figs/img18.png figs/img58.png	\
	figs/img179.png figs/img127.png figs/img108.png			\
	figs/img178.png figs/img90.png figs/img113.png			\
	figs/img128.png figs/img57.png figs/img120.png figs/img62.png	\
	figs/img146.png figs/img118.png					\
	figs/brz/brz_temporegressao.eps
PAPERS = papers/esa09.pdf papers/thesis.pdf papers/bmz_tr004_04.ps.gz papers/wads07.pdf \
	papers/bmz_wea2005.ps.gz papers/fch92.pdf papers/chm92.pdf

doc_HTML = \
	bdz.html brz.html chm.html fch.html bmz.html chd.html \
	faq.html concepts.html gperf.html newslog.html comparison.html  \
	examples.html index.html
EXTRA_DIST = $(T2T) gendocs $(FIGS) $(PAPERS)

all: $(doc_HTML)

COMMON_T2T = $(srcdir)/FOOTER.t2t $(srcdir)/GOOGLEANALYTICS.t2t $(srcdir)/CONFIG.t2t

cmph.1: CMPH.t2t
	txt2tags -t man -i CMPH.t2t -o $@
index.html: $(srcdir)/README.t2t $(srcdir)/CMPH.t2t $(srcdir)/LOGO.t2t $(srcdir)/NEWSLOG.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i README.t2t -o $(abs_builddir)/$@
	cd $(srcdir) && txt2tags -t txt -i README.t2t -o $(abs_top_builddir)/README
chd.html: $(srcdir)/CHD.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i CHD.t2t -o $(abs_builddir)/$@
bdz.html: $(srcdir)/BDZ.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i BDZ.t2t -o $(abs_builddir)/$@
bmz.html: $(srcdir)/BMZ.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i BMZ.t2t -o $(abs_builddir)/$@
brz.html: $(srcdir)/BRZ.t2t $(srcdir)/ALGORITHMS.t2t $(srcdir)/TABLEBRZ1.t2t \
	  $(srcdir)/TABLEBRZ2.t2t $(srcdir)/TABLEBRZ3.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i BRZ.t2t -o $(abs_builddir)/$@
chm.html: $(srcdir)/CHM.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i CHM.t2t -o $(abs_builddir)/$@
fch.html: $(srcdir)/FCH.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i FCH.t2t -o $(abs_builddir)/$@
comparison.html: $(srcdir)/COMPARISON.t2t $(srcdir)/ALGORITHMS.t2t $(srcdir)/TABLE1.t2t \
	         $(srcdir)/TABLE4.t2t $(srcdir)/TABLE5.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i COMPARISON.t2t -o $(abs_builddir)/$@
gperf.html: $(srcdir)/GPERF.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i GPERF.t2t -o $(abs_builddir)/$@
faq.html: $(srcdir)/FAQ.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i FAQ.t2t -o $(abs_builddir)/$@
concepts.html: $(srcdir)/CONCEPTS.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i CONCEPTS.t2t -o $(abs_builddir)/$@
newslog.html: $(srcdir)/NEWSLOG.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i NEWSLOG.t2t -o $(abs_builddir)/$@
examples.html: $(srcdir)/EXAMPLES.t2t $(srcdir)/ALGORITHMS.t2t $(COMMON_T2T)
	cd $(srcdir) && txt2tags -t html -i EXAMPLES.t2t -o $(abs_builddir)/$@

DISTCLEANFILES = $(doc_HTML)
